--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "materialize-css": "^0.100.2",
+    "material-design-lite": "^1.3.0",
+    "materialize-css": "^1.0.0-alpha.3",
     "vue": "^2.5.11"
   },
   "browserslist": [
